facet-diff/tests/snapshots/diff_snapshots__diff_value_array_vs_vec.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
[36m╭Before──────╮[0m
[36m│[0m[2m[[0m           [36m│[0m
[36m│[0m  [36m1[0m[2m,[0m        [36m│[0m
[36m│[0m  [36m2[0m[2m,[0m        [36m│[0m
[36m│[0m  [36m3[0m[2m,[0m        [36m│[0m
[36m│[0m[2m][0m           [36m│[0m
[36m╰────────────╯[0m
[32m╭After───────╮[0m
[32m│[0m[1mVec<i64>[0m[2m [[0m  [32m│[0m
[32m│[0m  [38;2;224;88;81m1[0m[2m,[0m        [32m│[0m
[32m│[0m  [38;2;224;88;81m2[0m[2m,[0m        [32m│[0m
[32m│[0m  [38;2;224;88;81m3[0m[2m,[0m        [32m│[0m
[32m│[0m[2m][0m           [32m│[0m
[32m╰────────────╯[0m
[33m╔Diff════════╗[0m
[33m║[0m[           [33m║[0m
[33m║[0m  1         [33m║[0m
[33m║[0m  2         [33m║[0m
[33m║[0m  3         [33m║[0m
[33m║[0m]           [33m║[0m
[33m╚════════════╝[0m
