facet-diff/tests/snapshots/diff_snapshots__diff_value_array_vs_vec_different.snap
---
source: facet-diff/tests/diff_snapshots.rs
assertion_line: 824
expression: "format_diff_comparison(&a, &b)"
---
╭Before────────────────╮
│[                     │
│  1,                  │
│  2,                  │
│  3,                  │
│]                     │
╰──────────────────────╯
╭After─────────────────╮
│Vec<i64> [1, 2, 4]    │
╰──────────────────────╯
╔Diff══════════════════╗
║[                     ║
║  .. 2 unchanged items║
║  3 → 4               ║
║]                     ║
╚══════════════════════╝
