facet-diff/tests/snapshots/diff_snapshots__diff_value_bool_different.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
[38;2;86;95;137m╭Before────────╮[0m
[38;2;86;95;137m│[0m[38;2;187;154;247mtrue[39m          [38;2;86;95;137m│[0m
[38;2;86;95;137m╰──────────────╯[0m
[38;2;86;95;137m╭After─────────╮[0m
[38;2;86;95;137m│[0m[38;2;187;154;247mfalse[39m         [38;2;86;95;137m│[0m
[38;2;86;95;137m╰──────────────╯[0m
[38;2;224;175;104m╔Diff══════════╗[0m
[38;2;224;175;104m║[0m[38;2;247;118;142mtrue[39m → [38;2;115;218;202mfalse[39m  [38;2;224;175;104m║[0m
[38;2;224;175;104m╚══════════════╝[0m
