facet-diff/tests/snapshots/diff_snapshots__diff_value_empty_array.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before──────╮
│[]          │
╰────────────╯
╭After───────╮
│[]          │
╰────────────╯
╔Diff════════╗
║[]          ║
╚════════════╝
